Soft_Website/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: soft-app
  labels:
    app: soft
    type: front-end
spec:
  replicas: 2
  selector:
    matchLabels:
      app: soft
  template:
    metadata:
      labels:
        app: soft
    spec: 
      containers:
        - name: soft-app
          image: timiscode/soft:latest
          ports:
            - containerPort: 3000
