Soft_Website/service.yml
apiVersion: v1
kind: Service
metadata:
  name: soft-service
  labels:
    app: soft
    type: front-end
spec:
  selector:
    app: soft
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
  externalTrafficPolicy: Local
