Soft_Website/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: soft-ingress 
  annotations: 
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    host: kool.timiscodes.xyz
    http:
      paths:
        - path: /
          pathType: Prefix
          backend: 
            service:
              name: soft-service
              port: 
                number: 80
